Fixed FB login url being too long

--- a/client/sass/product-search.sass
+++ b/client/sass/product-search.sass
@@ -72,6 +72,7 @@ gs-product-search
         div.product
           margin-top: 0.25em
           margin-bottom: 0.75em
+          border: solid 1px #fff
           -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.5)
           -moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.5)
           box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.5)
